Footer overlapping content issue

--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    @apply h-[100vh] font-sans;
+    @apply m-0 grid min-h-[100vh] grid-rows-[auto,1fr,auto] font-sans;
   }
 
   body h1,
